tests/errors/first_stage/label/empty_line/empty_line.as
; defining a label on an empty line
EMPTY: